# stochastic-image-denoising

./: CMakeLists.txt  README.md
core-doc-viewer/: CMakeLists.txt  main.cpp
core-doc-viewer/include/: image_denoising.h
core-doc-viewer/src/: image_denoising.cpp
ui-doc-viewer/: CMakeLists.txt  README.md  main.cpp
ui-doc-viewer/controllers/include/: image_controller.h  toolbox_controller.h
ui-doc-viewer/controllers/src/: image_controller.cpp  toolbox_controller.cpp
ui-doc-viewer/models/include/: image_model.h
ui-doc-viewer/models/src/: image_model.cpp
ui-doc-viewer/ui-widgets/include/: image_renderer.h  image_tab_widget.h  mainwindow.h
ui-doc-viewer/ui-widgets/src/: image_renderer.cpp  imager_tab_widget.cpp  mainwindow.cpp
ui-doc-viewer/ui-widgets/views/: mainwindow.ui
